reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell, cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93195382"
---
# <span data-ttu-id="a3ba6-103">Microsoft.PowerShell.Core Module</span><span class="sxs-lookup"><span data-stu-id="a3ba6-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="a3ba6-104">Descrição</span><span class="sxs-lookup"><span data-stu-id="a3ba6-104">Description</span></span>

<span data-ttu-id="a3ba6-105">Esta seção contém os tópicos de ajuda para os cmdlets instalados com o módulo Microsoft. PowerShell. Core do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="a3ba6-106">O módulo principal contém cmdlets e provedores que gerenciam os recursos básicos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="a3ba6-107">Cmdlets do Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="a3ba6-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="a3ba6-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="a3ba6-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="a3ba6-109">Acrescenta as entradas ao histórico de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="a3ba6-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a3ba6-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="a3ba6-111">Adiciona um ou mais snap-ins do Windows PowerShell à sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="a3ba6-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="a3ba6-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="a3ba6-113">Exclui entradas do histórico de comandos de sessão do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="a3ba6-114">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="a3ba6-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="a3ba6-115">Limpa o visor no programa host.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="a3ba6-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="a3ba6-117">Reconecta-se a sessões desconectadas.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="a3ba6-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="a3ba6-119">Debugs de um trabalho em execução, remoto ou do Windows PowerShell Workflow.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="a3ba6-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a3ba6-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="a3ba6-121">Impede que os pontos de extremidade do PowerShell recebam conexões remotas.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="a3ba6-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-123">Desabilita as configurações de sessão no computador local.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="a3ba6-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="a3ba6-125">Desconecta-se de uma sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="a3ba6-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a3ba6-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="a3ba6-127">Configura o computador para receber comandos remotos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="a3ba6-128">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-129">Habilita as configurações de sessão no computador local.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="a3ba6-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a3ba6-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="a3ba6-131">Conecta-se a e entra em uma sessão interativa com um processo local.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="a3ba6-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="a3ba6-133">Inicia uma sessão interativa com um computador remoto.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a3ba6-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a3ba6-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="a3ba6-135">Fecha uma sessão interativa com um processo local.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="a3ba6-136">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="a3ba6-137">Encerra uma sessão interativa com um computador remoto.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a3ba6-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="a3ba6-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="a3ba6-139">Exporta os nomes de snap-ins presentes na sessão atual para um arquivo de console.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="a3ba6-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="a3ba6-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="a3ba6-141">Especifica os membros do módulo que são exportados.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="a3ba6-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="a3ba6-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="a3ba6-143">Executa uma operação em cada item de uma coleção de objetos de entrada.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="a3ba6-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="a3ba6-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="a3ba6-145">Obtém todos os comandos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-145">Gets all commands.</span></span>

### [<span data-ttu-id="a3ba6-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="a3ba6-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="a3ba6-147">Exibe informações sobre os comandos e conceitos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="a3ba6-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="a3ba6-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="a3ba6-149">Obtém uma lista dos comandos inseridos durante a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="a3ba6-150">Get-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="a3ba6-151">Obtém trabalhos em segundo plano do PowerShell que estão em execução na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="a3ba6-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="a3ba6-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="a3ba6-153">Obtém os módulos que foram importados ou podem ser importados para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="a3ba6-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="a3ba6-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="a3ba6-155">Obtém informações de processo sobre o host do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="a3ba6-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="a3ba6-157">Obtém as sessões do PowerShell em computadores locais e remotos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="a3ba6-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="a3ba6-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="a3ba6-159">Obtém os recursos de um usuário específico em uma configuração de sessão restrita.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="a3ba6-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-161">Obtém as configurações de sessão registradas no computador.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="a3ba6-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a3ba6-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="a3ba6-163">Obtém os snap-ins do Windows PowerShell presentes no computador.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="a3ba6-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="a3ba6-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="a3ba6-165">Obtém os verbos aprovados do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="a3ba6-166">Import-Module</span><span class="sxs-lookup"><span data-stu-id="a3ba6-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="a3ba6-167">Adiciona módulos à sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="a3ba6-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="a3ba6-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="a3ba6-169">Executa comandos em computadores locais e remotos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="a3ba6-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="a3ba6-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="a3ba6-171">Executa comandos do histórico de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="a3ba6-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="a3ba6-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="a3ba6-173">Cria um novo módulo dinâmico que existe apenas na memória.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="a3ba6-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a3ba6-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="a3ba6-175">Cria um novo manifesto de módulo.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="a3ba6-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="a3ba6-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="a3ba6-177">Cria um arquivo que define um conjunto de recursos a serem expostos por meio de uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="a3ba6-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="a3ba6-179">Cria uma conexão persistente para um computador local ou remoto.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="a3ba6-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a3ba6-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="a3ba6-181">Cria um arquivo que define uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="a3ba6-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="a3ba6-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="a3ba6-183">Cria um objeto que contém opções avançadas para uma PSSession.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="a3ba6-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="a3ba6-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="a3ba6-185">Cria um objeto que contém opções avançadas para uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="a3ba6-186">Out-Default</span><span class="sxs-lookup"><span data-stu-id="a3ba6-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="a3ba6-187">Envia a saída para o formatador padrão e para o cmdlet de saída padrão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="a3ba6-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="a3ba6-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="a3ba6-189">Envia a saída para a linha de comando.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="a3ba6-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="a3ba6-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="a3ba6-191">Oculta a saída em vez de enviá-la pelo pipeline ou exibi-la.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="a3ba6-192">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="a3ba6-193">Obtém os resultados dos trabalhos em segundo plano do PowerShell na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="a3ba6-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="a3ba6-195">Obtém resultados de comandos em sessões desconectadas.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="a3ba6-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="a3ba6-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="a3ba6-197">Registra um argumento personalizado completo.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="a3ba6-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-199">Cria e registra uma nova configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="a3ba6-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="a3ba6-201">Exclui um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="a3ba6-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="a3ba6-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="a3ba6-203">Remove módulos da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="a3ba6-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="a3ba6-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="a3ba6-205">Fecha uma ou mais sessões do PowerShell (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="a3ba6-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="a3ba6-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a3ba6-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="a3ba6-207">Remove os snap-ins do Windows PowerShell da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="a3ba6-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="a3ba6-209">Reinicia um trabalho suspenso.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="a3ba6-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="a3ba6-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="a3ba6-211">Baixa e salva os arquivos de ajuda mais recentes em um diretório de sistema de arquivos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="a3ba6-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="a3ba6-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="a3ba6-213">Ativa/desativa os recursos de depuração de script, define o nível de rastreamento e ativa/desativa o modo estrito.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="a3ba6-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-215">Altera as propriedades de uma configuração de sessão registrada.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="a3ba6-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="a3ba6-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="a3ba6-217">Estabelece e impõe regras de codificação em expressões, scripts e blocos de script.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="a3ba6-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="a3ba6-219">Inicia um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="a3ba6-220">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="a3ba6-221">Interrompe um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="a3ba6-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="a3ba6-223">Interrompe temporariamente tarefas de fluxo de trabalho.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="a3ba6-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a3ba6-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="a3ba6-225">Verifica se um arquivo de manifesto de módulo descreve com precisão o conteúdo de um módulo.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="a3ba6-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a3ba6-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="a3ba6-227">Verifica as chaves e os valores em um arquivo de configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="a3ba6-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a3ba6-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="a3ba6-229">Exclui configurações de sessão registradas do computador.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="a3ba6-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="a3ba6-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="a3ba6-231">Baixa e instala os arquivos de ajuda mais recentes em seu computador.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="a3ba6-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="a3ba6-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="a3ba6-233">Suprime o prompt de comando até que um ou todos os trabalhos em segundo plano do PowerShell em execução na sessão sejam concluídos.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="a3ba6-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="a3ba6-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="a3ba6-235">Seleciona objetos de uma coleção com base em seus valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="a3ba6-235">Selects objects from a collection based on their property values.</span></span>
