reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell, cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93195439"
---
# <span data-ttu-id="ef432-103">Microsoft.PowerShell.Core Module</span><span class="sxs-lookup"><span data-stu-id="ef432-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="ef432-104">Descrição</span><span class="sxs-lookup"><span data-stu-id="ef432-104">Description</span></span>

<span data-ttu-id="ef432-105">Esta seção contém os tópicos de ajuda para os cmdlets instalados com o módulo Microsoft. PowerShell. Core do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="ef432-106">O módulo principal contém cmdlets e provedores que gerenciam os recursos básicos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="ef432-107">Cmdlets do Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="ef432-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="ef432-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="ef432-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="ef432-109">Acrescenta as entradas ao histórico de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="ef432-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="ef432-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="ef432-111">Exclui entradas do histórico de comandos de sessão do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="ef432-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="ef432-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="ef432-113">Limpa o visor no programa host.</span><span class="sxs-lookup"><span data-stu-id="ef432-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="ef432-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="ef432-115">Reconecta-se a sessões desconectadas.</span><span class="sxs-lookup"><span data-stu-id="ef432-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="ef432-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="ef432-117">Debugs de um trabalho de plano de fundo, remoto ou do PowerShell em execução.</span><span class="sxs-lookup"><span data-stu-id="ef432-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="ef432-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="ef432-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="ef432-119">Desabilite um recurso experimental na inicialização da nova instância do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="ef432-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="ef432-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="ef432-121">Impede que os pontos de extremidade do PowerShell recebam conexões remotas.</span><span class="sxs-lookup"><span data-stu-id="ef432-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="ef432-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="ef432-123">Desabilita as configurações de sessão no computador local.</span><span class="sxs-lookup"><span data-stu-id="ef432-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="ef432-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="ef432-125">Desconecta-se de uma sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="ef432-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="ef432-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="ef432-127">Habilite um recurso experimental na inicialização da nova instância do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="ef432-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="ef432-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="ef432-129">Configura o computador para receber comandos remotos.</span><span class="sxs-lookup"><span data-stu-id="ef432-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="ef432-130">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="ef432-131">Habilita as configurações de sessão no computador local.</span><span class="sxs-lookup"><span data-stu-id="ef432-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="ef432-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="ef432-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="ef432-133">Conecta-se a e entra em uma sessão interativa com um processo local.</span><span class="sxs-lookup"><span data-stu-id="ef432-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="ef432-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="ef432-135">Inicia uma sessão interativa com um computador remoto.</span><span class="sxs-lookup"><span data-stu-id="ef432-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="ef432-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="ef432-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="ef432-137">Fecha uma sessão interativa com um processo local.</span><span class="sxs-lookup"><span data-stu-id="ef432-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="ef432-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="ef432-139">Encerra uma sessão interativa com um computador remoto.</span><span class="sxs-lookup"><span data-stu-id="ef432-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="ef432-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="ef432-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="ef432-141">Especifica os membros do módulo que são exportados.</span><span class="sxs-lookup"><span data-stu-id="ef432-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="ef432-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="ef432-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="ef432-143">Executa uma operação em cada item de uma coleção de objetos de entrada.</span><span class="sxs-lookup"><span data-stu-id="ef432-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="ef432-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="ef432-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="ef432-145">Obtém todos os comandos.</span><span class="sxs-lookup"><span data-stu-id="ef432-145">Gets all commands.</span></span>

### [<span data-ttu-id="ef432-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="ef432-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="ef432-147">Obtém recursos experimentais.</span><span class="sxs-lookup"><span data-stu-id="ef432-147">Gets experimental features.</span></span>

### [<span data-ttu-id="ef432-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="ef432-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="ef432-149">Exibe informações sobre os comandos e conceitos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="ef432-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="ef432-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="ef432-151">Obtém uma lista dos comandos inseridos durante a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="ef432-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="ef432-153">Obtém trabalhos em segundo plano do PowerShell que estão em execução na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="ef432-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="ef432-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="ef432-155">Obtém os módulos que foram importados ou podem ser importados para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="ef432-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="ef432-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="ef432-157">Obtém informações de processo sobre o host do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="ef432-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="ef432-159">Obtém as sessões do PowerShell em computadores locais e remotos.</span><span class="sxs-lookup"><span data-stu-id="ef432-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="ef432-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="ef432-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="ef432-161">Obtém os recursos de um usuário específico em uma configuração de sessão restrita.</span><span class="sxs-lookup"><span data-stu-id="ef432-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="ef432-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="ef432-163">Obtém as configurações de sessão registradas no computador.</span><span class="sxs-lookup"><span data-stu-id="ef432-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="ef432-164">Import-Module</span><span class="sxs-lookup"><span data-stu-id="ef432-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="ef432-165">Adiciona módulos à sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="ef432-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="ef432-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="ef432-167">Executa comandos em computadores locais e remotos.</span><span class="sxs-lookup"><span data-stu-id="ef432-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="ef432-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="ef432-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="ef432-169">Executa comandos do histórico de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="ef432-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="ef432-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="ef432-171">Cria um novo módulo dinâmico que existe apenas na memória.</span><span class="sxs-lookup"><span data-stu-id="ef432-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="ef432-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="ef432-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="ef432-173">Cria um novo manifesto de módulo.</span><span class="sxs-lookup"><span data-stu-id="ef432-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="ef432-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="ef432-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="ef432-175">Cria um arquivo que define um conjunto de recursos a serem expostos por meio de uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="ef432-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="ef432-177">Cria uma conexão persistente para um computador local ou remoto.</span><span class="sxs-lookup"><span data-stu-id="ef432-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="ef432-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="ef432-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="ef432-179">Cria um arquivo que define uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="ef432-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="ef432-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="ef432-181">Cria um objeto que contém opções avançadas para uma PSSession.</span><span class="sxs-lookup"><span data-stu-id="ef432-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="ef432-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="ef432-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="ef432-183">Cria um objeto que contém opções avançadas para uma configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="ef432-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="ef432-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="ef432-185">Envia a saída para o formatador padrão e para o cmdlet de saída padrão.</span><span class="sxs-lookup"><span data-stu-id="ef432-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="ef432-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="ef432-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="ef432-187">Envia a saída para a linha de comando.</span><span class="sxs-lookup"><span data-stu-id="ef432-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="ef432-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="ef432-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="ef432-189">Oculta a saída em vez de enviá-la pelo pipeline ou exibi-la.</span><span class="sxs-lookup"><span data-stu-id="ef432-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="ef432-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="ef432-191">Obtém os resultados dos trabalhos em segundo plano do PowerShell na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="ef432-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="ef432-193">Obtém resultados de comandos em sessões desconectadas</span><span class="sxs-lookup"><span data-stu-id="ef432-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="ef432-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="ef432-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="ef432-195">Registra um argumento personalizado completo.</span><span class="sxs-lookup"><span data-stu-id="ef432-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="ef432-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="ef432-197">Cria e registra uma nova configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="ef432-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="ef432-199">Exclui um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="ef432-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="ef432-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="ef432-201">Remove módulos da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="ef432-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="ef432-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="ef432-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="ef432-203">Fecha uma ou mais sessões do PowerShell (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="ef432-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="ef432-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="ef432-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="ef432-205">Baixa e salva os arquivos de ajuda mais recentes em um diretório de sistema de arquivos.</span><span class="sxs-lookup"><span data-stu-id="ef432-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="ef432-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="ef432-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="ef432-207">Ativa/desativa os recursos de depuração de script, define o nível de rastreamento e ativa/desativa o modo estrito.</span><span class="sxs-lookup"><span data-stu-id="ef432-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="ef432-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="ef432-209">Altera as propriedades de uma configuração de sessão registrada.</span><span class="sxs-lookup"><span data-stu-id="ef432-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="ef432-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="ef432-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="ef432-211">Estabelece e impõe regras de codificação em expressões, scripts e blocos de script.</span><span class="sxs-lookup"><span data-stu-id="ef432-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="ef432-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="ef432-213">Inicia um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="ef432-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="ef432-215">Interrompe um trabalho em segundo plano do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="ef432-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="ef432-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="ef432-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="ef432-217">Verifica se um arquivo de manifesto de módulo descreve com precisão o conteúdo de um módulo.</span><span class="sxs-lookup"><span data-stu-id="ef432-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="ef432-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="ef432-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="ef432-219">Verifica as chaves e os valores em um arquivo de configuração de sessão.</span><span class="sxs-lookup"><span data-stu-id="ef432-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="ef432-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ef432-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="ef432-221">Exclui configurações de sessão registradas do computador.</span><span class="sxs-lookup"><span data-stu-id="ef432-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="ef432-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="ef432-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="ef432-223">Baixa e instala os arquivos de ajuda mais recentes em seu computador.</span><span class="sxs-lookup"><span data-stu-id="ef432-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="ef432-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="ef432-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="ef432-225">Suprime o prompt de comando até que um ou todos os trabalhos em segundo plano do PowerShell em execução na sessão sejam concluídos.</span><span class="sxs-lookup"><span data-stu-id="ef432-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="ef432-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="ef432-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="ef432-227">Seleciona objetos de uma coleção com base em seus valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="ef432-227">Selects objects from a collection based on their property values.</span></span>
